[package]
name = "sniper_bot"
version = "0.1.0"
edition = "2024"

[dependencies]


# THE WINDOWS FIX:
# This forces Rust to compile its own OpenSSL instead of looking for it on your PC.
openssl = { version = "0.10", features = ["vendored"] }
regex = "1.10"

tokio = { version = "1", features = ["full"] }
# NOTE: We removed the "=" sign here. This fixes the error.
solana-client = "1.18" 
solana-sdk = "1.18"
solana-program = "1.18"
solana-transaction-status = "1.18"
spl-token = "4.0"
spl-associated-token-account = "2.2"
dotenvy = "0.15"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
futures-util = "0.3"
chrono = "0.4"
bincode = "1.3"
base64 = "0.21"
bs58 = "0.4"
mpl-token-metadata = "5.1.1"
